[package]
name = "sql_json"
version = "0.1.0"
edition = "2024"

[dependencies]
deadpool-libsql = { version = "0.1.0", optional = true, features = ["serde"] }
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"], optional = true }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tokio-postgres = { version = "0.7.14", optional = true }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
tokio = "1.47.1"
tower-service = "0.3.3"

[features]
default = ["sqlite"]
sqlite = ["dep:deadpool-libsql"]
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres"]
deadpool-libsql = ["dep:deadpool-libsql"]
