[package]
name = "rltbl_db"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "rltbl_db is the database layer for the Relatable project."
repository = "https://github.com/rltbl/rltbl_db"
categories = ["database"]
readme = "README.md"

[dependencies]
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"], optional = true }
deadpool-sqlite = { version = "0.12.1", features = ["bundled", "column_decltype"], optional = true }
rust_decimal = { version = "1.39.0", features = ["db-tokio-postgres"], optional = true }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tokio-postgres = { version = "0.7.14", optional = true }

[dev-dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
pretty_assertions = "1.4.1"
tokio = "1.47.1"
tower-service = "0.3.3"

[features]
default = ["rusqlite", "tokio-postgres"]
rusqlite = ["dep:deadpool-sqlite"]
tokio-postgres = ["dep:deadpool-postgres", "dep:tokio-postgres", "dep:rust_decimal"]
