[package]
name = "rltbl_db"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "rltbl_db is the database layer for the Relatable project."
repository = "https://github.com/rltbl/rltbl_db"
categories = ["database"]
readme = "README.md"

[dependencies]
async-trait = "0.1.89"
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"], optional = true }
deadpool-sqlite = { version = "0.12.1", features = ["column_decltype"], optional = true }
deadpool-libsql = { version = "0.1.0", optional = true }
indexmap = "2.12.0"
lazy_static = "1.5.0"
rand = "0.9.2"
regex = "1.12.2"
rust_decimal = { version = "1.39.0", features = ["db-tokio-postgres", "macros"], optional = true }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
tree-sitter = "0.26.3"
tree-sitter-sequel = "0.3.11"

[dev-dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
pretty_assertions = "1.4.1"
tokio = "1.47.1"
tower-service = "0.3.3"

[features]
default = ["rusqlite", "tokio-postgres"]
rusqlite = ["dep:deadpool-sqlite", "rust_decimal/macros"]
tokio-postgres = ["dep:deadpool-postgres", "dep:rust_decimal"]
libsql = ["dep:deadpool-libsql", "dep:rust_decimal"]
